# Bimodal_simulation

./: .gitignore  00_learn_the_software.ipynb  01_real_battery_simulation.ipynb  02_composite_simulation.ipynb  02_misalignment_sweep.py  03_load_segmented_volume.ipynb  LICENSE  README.md  Volume_pair_analyser.ipynb  Volume_pair_analyser_v2-3.ipynb  __init__.py  artifacts.md  artifacts.py  bragg_edge_corrosion_phantom_notebook-2.ipynb  histogram.py  launch_gui.py  materials.py  metrics_table.py  metrics_table_morphology.py  neutron_xray_sim_gui.py  neutron_xray_sim_tutorial_v2.ipynb  neutron_xray_sim_tutorial_v3.ipynb  pyproject.toml  requirements.txt  setup.py  simulation.py
docs/: api-reference.md  concepts.md  examples.md  histogram-analysis.md  importing-data.md  index.md  installation.md  materials.md  neutron-spectra.md  phantoms.md  pipeline.md  reconstruction.md
neutron_xray_sim/: 01_artifact_comparison.py  03_gmm_segmentation.py  __init__.py  diana_plots.py  histogram.py  io.py  materials.py  ncrystal_bragg.py  neutron_spectra.py  phantom.py  projector.py  reconstructor.py  simulation.py  volume_importer.py
notebooks/: 04_phantom_showcase.py  Bragg_ND_metrics_combined-3.ipynb
